--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "swiper": "^11.0.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
